--- a/reset.css
+++ b/reset.css
@@ -92,6 +92,7 @@ video {
     vertical-align: baseline;
 }
 
+/* O palmeiras vai vira */
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
